# openenv-data-cleaning-env

./: Dockerfile  README.md  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  tasks.py
server/: app.py
