[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "OpenEnv-compliant Data Cleaning & Validation Environment"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project.scripts]
server = "server.app:main"